# mlops-loyola

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  model.yaml  pyproject.toml
.github/workflows/: test_branch.yaml
airflow/: Dockerfile  docker-compose.yaml
airflow/dags/: example.py  train_pipeline.py
artifacts/models/churn/: model.flm
data/cars/: README.md  schema.json
data/churn/: README.md  model.flm
docs/airflow/: README.md
docs/cicd/: README.md
docs/dev-env/: README.md
docs/make/: README.md
docs/mlflow/: README.md
docs/package/: README.md
mlflow/: Dockerfile  docker-compose.yaml
mlops/: __main__.py  app.py  config.py
mlops/apps/: __init__.py
mlops/apps/churn/: app.py
mlops/pipelines/: __init__.py  churn.py
mlops/processors/: churn.py
mlops/transformers/: __init__.py  feature_selector.py  outlier_clipper.py
notebooks/: 01-test-transformers.ipynb  02-test-training.ipynb  03-test-modelpipeline.ipynb
scripts/: black  install  isort  lint  pyright  ruff  serve  serve-airflow  serve-model  start-airflow  start-model  stop-airflow  stop-model  test
tests/unit/: test_config.py  test_pipelines.py  test_transformers.py
